--- a/books/jenkins/Jenkinsfile
+++ b/books/jenkins/Jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
         DEV_PROJECT = "mnmachado-books-dev"
         STAGE_PROJECT = "mnmachado-books-stage"
         APP_GIT_URL = "https://github.com/mnmachado/DO288-apps"
-        NEXUS_SERVER = "http://nexus-common.apps.ocp-la1.prod.nextcle.com" 
+        NEXUS_SERVER = "http://nexus-common.apps.ocp-la1.prod.nextcle.com/repository/nodejs" 
 
         // DO NOT CHANGE THE GLOBAL VARS BELOW THIS LINE
         APP_NAME = "books"
